Fixed mobile members page images and left aligned select dropdowns

--- a/src/containers/MemberPage/MemberPage.css
+++ b/src/containers/MemberPage/MemberPage.css
@@ -95,6 +95,7 @@
   font-size: 20px;
   font-weight: 700;
   margin-top: 13px;
+  text-align: left;
 }
 
 /* Brothers List */
@@ -171,6 +172,12 @@
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 10px, rgba(0, 0, 0, 0.23) 0px 3px 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 10px, rgba(0, 0, 0, 0.23) 0px 3px 10px;
   cursor: pointer;
+}
+@media(max-width: 768px) {
+  .brother-image-container {
+    height: 200px;
+    width: 150px;
+  }
 }
 
 .brother-image {
